# Conv2d

./: .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  CHANGELOG_2025_09.md  CLAUDE.md  COMPREHENSIVE_DOCUMENTATION.md  CRITICAL_TESTS.md  Conv2d-VQ-HDP-HSMM_Implementation_Roadmap.md  D1_DESIGN_GATE_SUMMARY.md  D1_IMPLEMENTATION_COMPLETE.md  D1_REVIEW_IMPLEMENTATION_SUMMARY.md  GPUSRV_ORIENTATION_README.md  HAILO_COMPILATION_BREAKTHROUGH.md  IMPLEMENTATION_SUMMARY.md  M1_6_T0_5_FINAL_REVIEW.md  ORGANIZATION_COMPLETE.md  PIPELINE_USAGE_GUIDE.md  QUADRUPED_PIPELINE_STATUS.md  QUICK_NAV.md  QUICK_START.md  README.md  README_PACKAGE.md  SETUP.md  SPRINT_COMPLETION_SUMMARY.md  T0.5_ACTION_PLAN.md  T3_2A_EXECUTION_REPORT.json  TRAINING_DATA_SUMMARY.md  TRAINING_STATUS_V2.md  datasets  deploy_to_edge_pi.sh  deploy_to_edge_pi_secure.sh  example_quality_control.py  example_usage.py  label_map.json  logging_config.py  movement_integration.py  nohup.out  pyproject.toml  pytest.ini  requirements.txt  (+10 more)
CVAT_Annotation/: CVAT_ANNOTATION_GUIDE.md  CVAT_Skeleton_Bug_Workaround_Guide.md  cvat_24points_individual_clean.json  cvat_labels_config.json  dog_skeleton_24points_universal.html
CVAT_Export_Pipeline/: README.md  annotations.xml  cvat_points_to_skeleton.py  cvat_to_sleap_converter.py  run_full_pipeline.py  sleap_to_training_integration.py
CVAT_Firebase_Pipeline/: README.md  firebase_to_cvat_transfer.py  gpusrv_setup.sh  requirements.txt
CoreML_Pipeline/: README.md
Pipeline_CVAT_Inguest/: README.md  cvat_to_yolo8_converter.py  run_yolo8_pipeline.py  yolo8_to_training_integration.py
Shared/: Entropy_Marginals_Module.md  Implementation_Checklist_90_Day_Sprint.md
StanfordDogs/: analyze_stanford_keypoints.py
StanfordDogs/tcn_oks_stub/: README.md  pyproject.toml
StanfordDogs/tcn_oks_stub/.github/workflows/: ci.yml
StanfordDogs/tcn_oks_stub/cli/: eval_oks.py
StanfordDogs/tcn_oks_stub/evaluation/: oks_eval.py
StanfordDogs/tcn_oks_stub/metrics/: oks.py
StanfordDogs/tcn_oks_stub/tests/: test_dataset.py  test_oks.py
StanfordDogs/tcn_oks_stub/viz/: draw.py
analysis/: codebook_analysis.py
annotation_pipeline/: CVAT_ANNOTATION_GUIDE.md  cvat_labels_config.json  label_comparison.md  update_colors.py
archive/: run_ablation_overnight.sh
benchmarks/: HAILO_CALIBRATION.md  latency_benchmark.py  test_hailo_validation.py  test_hailo_validation_simple.py
committee_results/: committee_report_20250924_182341.txt  committee_results_20250924_182341.json
conf/: base.yaml  cli_example.yaml
config/: __init__.py  training_config.py
configs/: enhanced_dataset_schema.yaml  fsq_edge_minimal.yaml  fsq_production.yaml  fsq_research.yaml  improved_config.py  model_config.yaml
conv2d_vq_hdp_hsmm/: __init__.py  hdp_clustering.py  hsmm.py  model.py  utils.py  vector_quantization.py
docs/: DATASET_DOCUMENTATION.md  FSQ_TUNING_GUIDE.md  PAMAP2_QUADRUPED_MAPPING.md  SSH_SECURITY.md  TRAINING_PIPELINE.md  clustering.md  configuration.md  contracts.md  fsq_contract.md  logging.md  metrics.md  packaging.md  preprocessing.md  temporal.md  testing.md
evaluation_data/: data_config.json  y_test.npy  y_train.npy  y_val.npy
examples/: cli_usage.sh  clustering_usage.py  config_usage.py  data_pipeline_usage.py  evaluation_demo.py  fsq_usage.py  logging_demo.py  packaging_demo.py  performance_optimizations.py  temporal_usage.py
experiments/: Ablation_Framework_Upgraded_backup.py  FSQ_LEVELS_GUIDE.md  ablation_fsq.py  ablation_fsq_final.py  ablation_fsq_fixed.py  ablation_fsq_quick.py  ablation_study.py  ablation_vq_eval_fix.py  ablation_vq_fixed_final.py  ablation_vq_verbose.py  compare_fsq_configs.py  debug_ablation_fsq.py  debug_data_and_model.py  duration_validation_helper.py  test_fsq_ablation_minimal.py  test_fsq_directly.py  test_fsq_levels.py  vq_perplexity_helper.py
hailo_export/: README.md  causal_intervention_roadmap.md  export_best_model.py  export_fsq_for_hailo.py  export_hailo.py  hailo8_hef_compilation_checklist.md
local_handoff/: AI_Handoff_Instructions_Remote_Server.md  AI_Handoff_Template (1).md  Ablation_Framework_Upgraded.py  GPUSRV_AI_HANDOFF_2025-09-06.md  VQ_Codebook_Collapse_Analysis.md  compass_artifact_wf-73db5095-ce03-4364-935a-766cd5a2cdc1_text_markdown.md
m13_fsq_deployment/: deployment_results.json
models/: README.md  VectorQuantizerEMA2D_Fixed.py  __init__.py  best_conv2d_vq_model.pth  calibration.py  conv2d_fsq_calibrated.py  conv2d_fsq_hailo.py  conv2d_fsq_model.py  conv2d_fsq_optimized.py  conv2d_vq_hdp_hsmm.py  conv2d_vq_model.py  conv2d_vq_training_history.json  device_attention.py  entropy_uncertainty.py  eval_committee_table.py  final_training_history.json  fsq_rd_rounding.py  hdp_components.py  hsmm_components.py  mutual_information_corrected.py  quadruped_processor.pkl  t0_complete_implementation.py  tcn_vae_hailo.py  temperature_scaler.py  training_history.json  transfer_entropy_real.py  vq_components.py  vq_ema_2d.py
preprocessing/: README.md  __init__.py  data_augmentation.py  data_quality_handler.py  enhanced_pipeline.py  kinematic_features.py  movement_diagnostics.py  movement_integration.py  quadruped_pipeline.py  stanford_dogs_pipeline.py  unified_pipeline.py  vectorized_optimizations.py
scripts/: compile_tcn_vae_hailo8.py  compile_yolo_pose_hailo8_t3_2a.py  compile_yolov8_hailo8_fixed.py  dataset_manager.py  download_real_datasets.py  download_tartanvo.py  download_tartanvo_direct.py  fsq_tuning_toolkit.py  monitor_training.sh  process_pamap2_quadruped.py  progress_report.py  quick_fsq_test.py  run_report_in_30min.py  setup_monitoring.sh  setup_secure_ssh.sh  setup_ssd_storage.sh  sync_mcp_server.sh  validate_fsq_config.py  validate_fsq_real_data.py  verify_hailo_architecture.py
sleap_integration/: README.md  cvat_to_sleap_converter.py  ios_coreml_integration.py  requirements.txt  sleap_training_pipeline.py
t3_2a_deployment_package/: README.md  execute_t3_2a.py
tests/: README.md  test_calibration_improvements.py  test_clustering.py  test_clustering_determinism.py  test_components.py  test_contracts.py  test_data_transforms.py  (+18 more)
(+259 files in other folders)
